Fixed page shift due to scrollbar

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,8 @@
 // bower:scss
 // endbower
-
+html {
+	overflow-y: scroll; 
+}
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
